[tool.poetry]
name = "youarehere"
version = "1.0.0"
description = "Route53 DNS utility"
readme = "README.md"
homepage = "https://github.com/j6k4m8/youarehere"
authors = ["Jordan Matelsky <j6k4m8@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
youarehere = "youarehere:cli"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.10.43"
requests = "^2.22.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
